# try-regime-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  research_to_production.ipynb
.github/workflows/: ci.yml
configs/: event_calendar.yaml  main_config.yaml
notebooks/: exploration.ipynb
reports/: metrics.json  processed_results.csv  research_summary.md
src/: main.py
src/analysis/: backtest.py  carry_risk.py  crisis_audit.py  intervention.py  live_check.py  reporter.py  risk.py  stats.py
src/dashboard/: engine.py  gauges.py
src/data/: loader.py  models.py
src/features/: builder.py
src/models/: hazard.py  regime_detector.py
src/utils/: config.py
src/visualization/: plots.py
tests/: test_pipeline.py
